--- a/html/html5/form_tag.html
+++ b/html/html5/form_tag.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Tag</title>
 </head>
+
 <body>
-    
+
 
     <form method="post">
 
-        아이디 <input type="text" name="username">
-        <br>
-        비밀번호 <input type="password" name="password">
+        <fieldset>
 
-        <input type="submit" value="전송">
+            <legend>로그인 폼</legend>
+
+            <table>
+                <tr>
+                    <td>
+                        <label for="username">아이디</label>
+                    </td>
+                    <td><input type="text" name="username" id="username"></td>
+                </tr>
+                <tr>
+                    <td><label for="pw">비밀번호</label></td>
+                    <td><input type="password" name="password" id="pw"></td>
+                </tr>
+                <tr>
+                    <td><label for="check">개인정보 확인</label></td>
+                    <td>
+                        <input type="checkbox" id="check" name="check">                        
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="submit" value="전송"></td>
+                </tr>
+            </table>
+
+        </fieldset>
+
 
     </form>
 
 
 
 </body>
+
 </html>
