--- a/html/js/js_loop.html
+++ b/html/js/js_loop.html
@@ -38,9 +38,11 @@
         console.log(item)
     }
 
-    arr1.forEach(function(item, index){
+    arr1.forEach(
+        function(item, index){
         console.log(index, item)
-    });
+    }
+    );
 
     let i = 0;
 
