--- a/html/js/js_function.html
+++ b/html/js/js_function.html
@@ -84,9 +84,9 @@
         console.log(items)
     }
 
-    fn3(1,2)
-    fn3(1,2,3)
-    fn3(1,2,3,4)
+    fn3(1,2) // items => []
+    fn3(1,2,3) // items => [3]
+    fn3(1,2,3,4) // items => [3,4]
 
     function fn4(...items){
         console.log(items)
