--- a/html/js/js_function2.html
+++ b/html/js/js_function2.html
@@ -17,9 +17,9 @@
             console.log(i+1)
         }
 
-        for (let index = 0; index < 10 ; index++) {
+        //for (let index = 0; index < 10 ; index++) {
            callback()           
-        }
+        //}
     }
 
     let fn = function(){
@@ -37,8 +37,9 @@
 
     const arr = [1,2,3,4,5]
 
-    arr.forEach(function(num, index){
-        console.log(index, num)
+    
+    arr.forEach(function(num){
+        console.log(num)
     })
 
     console.log('')
