--- a/jsp/intellij/firstapp/FirstApp/src/main/webapp/login.html
+++ b/jsp/intellij/firstapp/FirstApp/src/main/webapp/login.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 
-  <h1>로그인</h1>
-  <hr>
-  <form action="my" method="post">
-    
-    ID <input type="text" name="userid" id="userid">
+<h1>로그인</h1>
+<hr>
+<form action="login.jsp" method="get">
+
+    ID <input type="text" name="userid" id="userid">z
     <br>
     PW <input type="password" name="pw" id="pw">
     <br>
     <input type="submit" value="로그인">
 
-  </form>
+</form>
 
 </body>
 </html>
