--- a/html/jquery/index.html
+++ b/html/jquery/index.html
@@ -62,10 +62,115 @@
 
             ////////////////////////////////////////////////
 
-            $('table tr:odd').css('background-color', 'green')
+            /* $('table tr:odd').css('background-color', 'green')
             $('table tr:even').css('background-color', 'yellow')
             $('table tr:first').css('background-color', 'black').css('color', 'white')
             $('table tr:last').css('background-color', 'gray').css('color', 'blue')
+ */
+
+            ////////////////////////////////////////////////
+
+            /* $('tr').first().css('color', 'blue')
+            $('tr').last().css('color', 'red')
+            $('tr').eq(3).css('color', 'green') */
+
+
+            ////////////////////////////////////////////////
+
+            // 배열 생성
+            /* let links = [
+                {name : '네이버',url : 'http://www.naver.com'},
+                {name : '다음',url : 'http://www.naver.com'},
+                {name : '카카오', url : 'http://www.kakao.com'}
+            ]
+
+            let html = ''
+            // 배열 처리
+            $.each(links, (index, item) => {
+                console.log(index, item);
+
+                html += '<a href="'+item.url+'">'+item.name+'</a>\n'
+
+            })
+
+            console.log(html);
+
+            // html() => innerHtml 속성 처리와 같다!
+            // get
+            let bodyVal = $('body').html()
+            //console.log(bodyVal);
+
+            // set
+            $('#links').html(html) */
+
+            ////////////////////////////////////////////////
+
+            /* $('h1').each((index, item) => {
+
+                //$(item)
+
+                // get
+                console.log(index, item.innerHTML);
+
+                // jquery get
+                console.log(index, $(item).html());
+
+                $(item).css('color', 'red')
+
+            }) */
+
+            ////////////////////////////////////////////////
+
+            /* $('h1').filter((index, item) => {
+                return index%3==0  // return 값이 true 인것만 선택이 된다!
+            }).css('color', 'blue') */
+
+            ////////////////////////////////////////////////
+
+            // xml 문자열을 만든다.
+            let xml = '';
+            xml += '<links>';
+            xml += ' <link>';
+            xml += ' <name>네이버</name>';
+            xml += ' <url>http://www.naver.com</url>';
+            xml += ' </link>';
+            xml += ' <link>';
+            xml += ' <name>다음</name>';
+            xml += ' <url>http://www.daum.net</url>';
+            xml += ' </link>';
+            xml += ' <link>';
+            xml += ' <name>카카오</name>';
+            xml += ' <url>http://www.kakao.com</url>';
+            xml += ' </link>';
+            xml += '</links>';
+
+
+            //console.log(xml);
+
+
+            // xml 형식을 가지는 문자열을 xml 문서객체로 변경
+            let xmlDoc = $.parseXML(xml)
+
+            let html = '';
+
+            // xmlDocument -> jQuery   : find(태그 이름) -> 태그 검색
+            $(xmlDoc).find('link').each((index, item) => {
+                // $(this) => <link>
+                let name = $(item).find('name').text();
+                let url = $(item).find('url').text();
+
+                console.log(name, url);
+
+                html += '<div>'
+                html += '   <h2>'+name+'</h2>'
+                html += '   <p>'+url+'</p>'
+                html += '</div>'
+
+            })
+
+            $('body').html(html)
+
+
 
 
         })
@@ -76,8 +181,18 @@
 </head>
 <body>
 
+    <!-- <h1>header - 0</h1>
+    <h1>header - 1</h1>
+    <h1>header - 2</h1>
+    <h1>header - 3</h1>
+    <h1>header - 4</h1> -->
 
-    <table border="1">
+
+
+    <!-- <div id="links"></div> -->
+
+
+    <!-- <table border="1">
         <tr>
             <td>thead 1</td>
             <td>thead 2</td>
@@ -106,7 +221,7 @@
             <td>footer - 1</td>
             <td>footer - 2</td>
         </tr>
-    </table>
+    </table> -->
 
 
 
