--- a/html/jquery/jquery_event.html
+++ b/html/jquery/jquery_event.html
@@ -39,14 +39,66 @@
                 }
             }) */
 
-            $('div').click(function(e){
+            /* $('div').click(function(e){
 
                 let h3 = $('h3', this).text();
                 let p = $('p', this).text();
 
                 console.log(h3, p);
 
-            });
+            }); */
+
+            /* $('a').click(function(e){
+
+
+                // 기본 이벤트 제거!
+                //e.preventDefault();
+
+                console.log('a click!!!')
+
+                return false
+
+            })
+
+            $('form').submit(function(e){
+                console.log("form submit !!!!");
+
+                let uid = $('#uid').val()
+
+                if(uid==null || uid.length<1){
+                    alert('공백 불가!')                    
+                    return false;
+                }
+
+                
+            }) */
+
+            /* $('h1').click(function(){
+                var length = $('h1').length;
+                let oldHtml = $(this).html()
+                $('#wrap').append('<h1>'+length+ ' - ' + oldHtml +'</h1>')
+            }) */
+
+            /* $('#wrap').on('click', 'h1', function(){
+                var length = $('h1').length;
+                let oldHtml = $(this).html()
+                $('#wrap').append('<h1>'+length+ ' - ' + oldHtml +'</h1>')
+            }) */
+
+            $('textarea').keyup(function(){
+                let cnt = $(this).val().length
+                let remain = 150-cnt;
+
+                if(remain<0){
+                    alert('150자 까지만 작성이 가능합니다.')
+                    let str = $(this).val().substr(0,150)
+                    $(this).val(str)
+                    $('span').text('150')
+                    return false
+                }
+
+                $('span').text(cnt)
+            })
 
 
 
@@ -59,7 +111,27 @@
 
 <body>
 
-    <div>
+
+    <textarea cols="50" rows="5"></textarea>
+    <span>0</span>/150
+
+
+
+   <!--  <div id="wrap">
+        <h1>header</h1>
+    </div> -->
+
+
+
+    <!-- <form action="http://www.naver.com">
+        <input type="text" id="uid" name="uid">
+        <input type="submit">
+    </form>
+
+
+    <a href="http://www.naver.com">Naver</a> -->
+
+    <!-- <div>
         <h3>header 1</h3>
         <p> paragraph1</p> 
         <input type="hidden" value="1">
@@ -71,7 +143,7 @@
     <div>
         <h3>header 3</h3>
         <p> paragraph3</p>
-    </div>
+    </div> -->
 
     <!-- <h1>header-0</h1>
     <h1>header-1</h1>
