--- a/html/jquery/jquery_dom2.html
+++ b/html/jquery/jquery_dom2.html
@@ -12,11 +12,11 @@
 
         $().ready(function(){
           
-            /* $('<h1></h1>').appendTo('body')
+            $('<h1></h1>').appendTo('body')
             $('body').append('<h2></h2>')
 
             $('<h3></h3>').prependTo('body')
-            $('body').prepend('<h4></h4>') */
+            $('body').prepend('<h4></h4>')
 
             /* $('<h1></h1>').html('hello!!!').appendTo('body')
             $('<h3>DOM h1 create!!!</h3>').appendTo('body')
