--- a/html/jquery/index.html
+++ b/html/jquery/index.html
@@ -13,9 +13,11 @@
         // window.onload = () => {}
         // $() -> 팩토리 함수 : jquery 객체를 생성해주는 메소드
         // document -> jquery 객체로 생성
-        // $(document).ready(function(){
-        //     console.log('onload: jquery ready mehod');
-        // })
+        $(document).ready(function(){
+
+            console.log('onload: jquery ready mehod');
+
+        })
 
         // $().ready(() => {
         //     alert('onload !!!')
@@ -30,27 +32,27 @@
             //$('*')
             //h2.style.
 
-            // $('*').css('color', 'red').css('background-color', '#eee');
+            $('*').css('color', 'red').css('background-color', '#eee');
             // $('.bg-black').css('background-color', '#000')
             // $('#pick').css('background-color', 'yellow')
 
             ////////////////////////////////////////////////
 
-            //document.querySelector('input[type=text]').value='안녕!!!'
-            /* $('input[type=text]').val('안녕하세요123!!!');
+            document.querySelector('input[type=text]').value='안녕!!!'
+            $('input[type=text]').val('안녕하세요123!!!');
 
             let val1 = document.querySelector('input[type=text]').value
 
             let val2 = $('input:text').val()
 
             console.log('val1', val1);
-            console.log('val2', val2); */
+            console.log('val2', val2);
 
 
             ////////////////////////////////////////////////
 
             // 5초 후에 선택된 항목의 값을 확인
-            /* setTimeout(() => {
+            setTimeout(() => {
 
                 let selectVal = $('select > option:selected').val()
                 console.log('selectVal', selectVal);
@@ -58,7 +60,7 @@
                 let checkVal = $('input:checkbox:checked').val()
                 console.log('checkVal', checkVal)
 
-            },5000) */
+            },5000)
 
             ////////////////////////////////////////////////
 
@@ -70,21 +72,22 @@
 
             ////////////////////////////////////////////////
 
-            /* $('tr').first().css('color', 'blue')
+            $('tr').first().css('color', 'blue')
             $('tr').last().css('color', 'red')
-            $('tr').eq(3).css('color', 'green') */
+            $('tr').eq(3).css('color', 'green')
 
 
             ////////////////////////////////////////////////
 
             // 배열 생성
-            /* let links = [
+            let links = [
                 {name : '네이버',url : 'http://www.naver.com'},
                 {name : '다음',url : 'http://www.naver.com'},
                 {name : '카카오', url : 'http://www.kakao.com'}
             ]
 
             let html = ''
+            
             // 배열 처리
             $.each(links, (index, item) => {
                 console.log(index, item);
@@ -101,11 +104,11 @@
             //console.log(bodyVal);
 
             // set
-            $('#links').html(html) */
+            $('#links').html(html)
 
             ////////////////////////////////////////////////
 
-            /* $('h1').each((index, item) => {
+            $('h1').each((index, item) => {
 
                 //$(item)
 
@@ -117,7 +120,7 @@
 
                 $(item).css('color', 'red')
 
-            }) */
+            })
 
             ////////////////////////////////////////////////
 
